Fix alignment of certification descriptions, add alt text for screen readers

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,7 +13,6 @@
 
 /* ---------- FOR RESUME PAGE ---------- */
 .badges {
-  display: inline-block;
   max-width: 7rem;
   aspect-ratio: 1/1;
 }
